--- a/views/anenst/mien.html
+++ b/views/anenst/mien.html
@@ -96,11 +96,9 @@
                 <div class="col-sm-8">
                     <div class="bread">
                         <span>
-                            <a href="">首页</a>
+                            <a href="">公司文化 </a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">关于我们</a>
-                            <i>&nbsp;&gt;&gt;</i>
-                            <a href="">员工风采</a>
+                            <a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a>
                         </span>
                     </div>
                     <div class="text-introduce">
@@ -112,13 +110,9 @@
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li class="active"><a href="#"><i class="icon icon-chevron-right"></i>公司概况</a></li>
-                        <li><a href="#"><i class="icon icon-chevron-right"></i>总裁致辞</a></li>
-                        <li><a href="#"><i class="icon icon-chevron-right"></i>发展历史</a></li>
-                        <li><a href="#"><i class="icon icon-chevron-right"></i>集团架构</a></li>
-                        <li><a href="#"><i class="icon icon-chevron-right"></i>文化理念</a></li>
-                        <li><a href="#"><i class="icon icon-chevron-right"></i>员工风采</a></li>
-                        <li><a href="#"><i class="icon icon-chevron-right"></i>联系我们</a></li>
+                        <li class=""><a href="../../../officialwebsite/views/anenst/contact.html"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
+                        <li class="active"><a href="../../../officialwebsite/views/anenst/mien.html"><i class="glyphicon glyphicon-menu-right"></i>员工风采</a></li>
+
                     </ul>
                 </div>
             </div>
