--- a/views/join/recruit.html
+++ b/views/join/recruit.html
@@ -96,11 +96,9 @@
                 <div class="col-sm-8">
                     <div class="bread">
                         <span>
-                            <a href="">首页</a>
-                            <i>&nbsp;&gt;&gt;</i>
                             <a href="">关于我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">工作机会</a>
+                            <a href="../../../officialwebsite/views/join/recruit.html">工作机会</a>
                         </span>
                     </div>
                     <div class="position-list">
@@ -116,19 +114,19 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td><a href="#">销售</a></td>
+                                    <td><a href="./recruitinfo.html">销售</a></td>
                                     <td>大专</td>
                                     <td>2年</td>
                                     <td>10</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="#">销售</a></td>
+                                    <td><a href="./recruitinfo.html">销售</a></td>
                                     <td>大专</td>
                                     <td>2年</td>
                                     <td>10</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="#">销售</a></td>
+                                    <td><a href="./recruitinfo.html">销售</a></td>
                                     <td>大专</td>
                                     <td>2年</td>
                                     <td>10</td>
@@ -139,9 +137,9 @@
                 </div> 
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>工作机会</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>人才战略</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工成长</a></li>
+                        <li ><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
+                        <li class="active"><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
+                        <li ><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
 
