--- a/views/anenst/contact.html
+++ b/views/anenst/contact.html
@@ -97,11 +97,9 @@
                 <div class="col-sm-8">
                     <div class="bread">
                         <span>
-                            <a href="">首页</a>
-                            <i>&nbsp;&gt;&gt;</i>
                             <a href="">关于我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">联系我们</a>
+                            <a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a>
                         </span>
                     </div>
                     <div class="text-introduce">
@@ -138,13 +136,13 @@
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工风采</a></li>
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+                        <li class=""><a href="../../../officialwebsite/views/anenst/companyinfo.html"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/speech.html"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/history.html"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
+
+                        <li class="active"><a href="../../../officialwebsite/views/anenst/contact.html"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+
                     </ul>
                 </div>
 
