--- a/views/join/hr.html
+++ b/views/join/hr.html
@@ -96,9 +96,7 @@
                 <div class="col-sm-8">
                     <div class="bread">
                         <span>
-                            <a href="">首页</a>
-                            <i>&nbsp;&gt;&gt;</i>
-                            <a href="">关于我们</a>
+                            <a href="">加入我们</a>
                             <i>&nbsp;&gt;&gt;</i>
                             <a href="">联系hr</a>
                         </span>
@@ -149,9 +147,9 @@
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>工作机会</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>人才战略</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工成长</a></li>
+                        <li ><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
+                        <li class="active"><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
 
