--- a/views/join/talentStrategy.html
+++ b/views/join/talentStrategy.html
@@ -98,7 +98,7 @@
                         <span>
                             <a href="">加入我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">人才战略</a>
+                            <a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a>
 
                         </span>
                     </div>
@@ -153,13 +153,9 @@
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工风采</a></li>
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+                        <li class="active"><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
+                        <li ><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
+                        <li ><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
 
