--- a/views/product/productInfo.html
+++ b/views/product/productInfo.html
@@ -96,11 +96,10 @@
                 <div class="col-sm-8">
                     <div class="bread">
                         <span>
-                            <a href="">首页</a>
-                            <i>&nbsp;&gt;&gt;</i>
                             <a href="">公司产品</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">业务领域</a>
+                            <a href="../../../officialwebsite/views/product/products.html">产品展示</a>
+
                         </span>
                     </div>
                     <div class="text-introduce">
@@ -207,13 +206,9 @@
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工风采</a></li>
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
+                        <li class="active"><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
+                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
                     </ul>
                 </div>
 
