--- a/views/media/news.html
+++ b/views/media/news.html
@@ -96,11 +96,9 @@
                 <div class="col-sm-8">
                     <div class="bread">
                         <span>
-                            <a href="">首页</a>
-                            <i>&nbsp;&gt;&gt;</i>
                             <a href="">媒体中心</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">新闻动态</a>
+                            <a href="../../../officialwebsite/views/media/news.html">新闻动态</a>
                         </span>
                     </div>
                     <div class="news-center">
@@ -144,8 +142,9 @@
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>新闻动态</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>专题报道</a></li>
+                        <li class="active"><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
+                        <li ><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
                     </ul>
                 </div>
 
