--- a/css/common.scss
+++ b/css/common.scss
@@ -373,6 +373,18 @@ ul,li{
       cursor: pointer;
       padding: 15px;
       border-bottom: 1px solid #dddddd;
+      position: relative;
+      height: 40px;
+      line-height: 40px;
+      text-indent: 5px;
+      a{
+        display: block;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        position: absolute;
+      }
     }
     li.active,li:hover{
       border-bottom: none;
@@ -491,7 +503,7 @@ ul,li{
       }
       .lishi_neirong{
         float: left;
-        margin-left: 15px;
+        margin-left: 26px;
         width: 700px;
         p{
           font-family: "微软雅黑";
