--- a/views/join/recruit.html
+++ b/views/join/recruit.html
@@ -17,7 +17,7 @@
 <div class="header">
     <div class="contain">
         <div class="con-header">
-            <a class="logo" href="../../../officialwebsite/index.html"></a>
+            <a class="logo" href="./index.html"></a>
             <div class="nav-right">
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
@@ -31,17 +31,17 @@
     <div class="nav-tag">
         <ul class="nav nav-bar">
             <li class="nav-tabs">
-                <a class="first-tab active" href="../../../officialwebsite/index.html">首页</a>
+                <a class="first-tab active" href="./index.html">首页</a>
             </li>
             <li class="nav-tabs">
                 <a class="first-tab" href="#">关于我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/anenst/companyinfo.html">公司概况</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/speech.html">总裁致辞</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/history.html">发展历史</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a></li>
+                        <li><a href="../anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="../anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="../anenst/history.html">发展历史</a></li>
+                        <li><a href="../anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="../anenst/contact.html">联系我们</a></li>
                     </ul>
                 </div>
             </li>
@@ -49,9 +49,9 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
-                        <li><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
-                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
+                        <li><a href="../media/news.html">新闻动态</a></li>
+                        <li><a href="../media/media.html">媒体报道</a></li>
+                        <li><a href="../media/thematicReport.html">专题报道</a></li>
                     </ul>
                 </div>
             </li>
@@ -59,9 +59,9 @@
                 <a class="first-tab" href="#">公司产品</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
-                        <li><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
-                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
+                        <li><a href="../product/business.html">业务领域</a></li>
+                        <li><a href="../product/products.html">产品展示</a></li>
+                        <li><a href="../product/cooperation.html">招商合作</a></li>
                     </ul>
                 </div>
             </li>
@@ -69,8 +69,8 @@
                 <a class="first-tab" href="#">公司文化</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/anenst/culture.html">文化理念</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a></li>
+                        <li><a href="../anenst/culture.html">文化理念</a></li>
+                        <li><a href="../anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
@@ -78,9 +78,9 @@
                 <a class="first-tab" href="#">加入我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
-                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
-                        <li><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
+                        <li><a href="../join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../join/recruit.html">工作机会</a></li>
+                        <li><a href="../join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
@@ -98,7 +98,7 @@
                         <span>
                             <a href="">关于我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="../../../officialwebsite/views/join/recruit.html">工作机会</a>
+                            <a href="../join/recruit.html">工作机会</a>
                         </span>
                     </div>
                     <div class="position-list">
@@ -137,9 +137,9 @@
                 </div> 
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li ><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
-                        <li class="active"><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
-                        <li ><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
+                        <li ><a href="../join/talentStrategy.html">人才战略</a></li>
+                        <li class="active"><a href="../join/recruit.html">工作机会</a></li>
+                        <li ><a href="../join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
 
@@ -155,11 +155,11 @@
             <li><span>关于我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/anenst/companyinfo.html">公司概况</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/speech.html">总裁致辞</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/history.html">发展历史</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a></li>
+                        <li><a href="../anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="../anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="../anenst/history.html">发展历史</a></li>
+                        <li><a href="../anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="../anenst/contact.html">联系我们</a></li>
 
                     </ul>
                 </div>
@@ -167,35 +167,35 @@
             <li><span>媒体中心</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
-                        <li><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
-                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
+                        <li><a href="../media/news.html">新闻动态</a></li>
+                        <li><a href="../media/media.html">媒体报道</a></li>
+                        <li><a href="../media/thematicReport.html">专题报道</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>公司产品</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
-                        <li><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
-                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
+                        <li><a href="../product/business.html">业务领域</a></li>
+                        <li><a href="../product/products.html">产品展示</a></li>
+                        <li><a href="../product/cooperation.html">招商合作</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>公司文化</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/anenst/culture.html">文化理念</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a></li>
+                        <li><a href="../anenst/culture.html">文化理念</a></li>
+                        <li><a href="../anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>加入我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
-                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
-                        <li><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
+                        <li><a href="../join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../join/recruit.html">工作机会</a></li>
+                        <li><a href="../join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
