--- a/views/anenst/groupStructure.html
+++ b/views/anenst/groupStructure.html
@@ -19,7 +19,7 @@
 <div class="header">
     <div class="contain">
         <div class="con-header">
-            <a class="logo" href="../../../officialwebsite/index.html"></a>
+            <a class="logo" href="../../index.html"></a>
             <div class="nav-right">
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
@@ -33,17 +33,17 @@
     <div class="nav-tag">
         <ul class="nav nav-bar">
             <li class="nav-tabs">
-                <a class="first-tab active" href="../../../officialwebsite/index.html">首页</a>
+                <a class="first-tab active" href="../../index.html">首页</a>
             </li>
             <li class="nav-tabs">
                 <a class="first-tab" href="#">关于我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/anenst/companyinfo.html">公司概况</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/speech.html">总裁致辞</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/history.html">发展历史</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a></li>
+                        <li><a href="../anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="../anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="../anenst/history.html">发展历史</a></li>
+                        <li><a href="../anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="../anenst/contact.html">联系我们</a></li>
                     </ul>
                 </div>
             </li>
@@ -51,9 +51,9 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
-                        <li><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
-                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
+                        <li><a href="../media/news.html">新闻动态</a></li>
+                        <li><a href="../media/media.html">媒体报道</a></li>
+                        <li><a href="../media/thematicReport.html">专题报道</a></li>
                     </ul>
                 </div>
             </li>
@@ -61,9 +61,9 @@
                 <a class="first-tab" href="#">公司产品</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
-                        <li><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
-                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
+                        <li><a href="../product/business.html">业务领域</a></li>
+                        <li><a href="../product/products.html">产品展示</a></li>
+                        <li><a href="../product/cooperation.html">招商合作</a></li>
                     </ul>
                 </div>
             </li>
@@ -71,8 +71,8 @@
                 <a class="first-tab" href="#">公司文化</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/anenst/culture.html">文化理念</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a></li>
+                        <li><a href="../anenst/culture.html">文化理念</a></li>
+                        <li><a href="../anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
@@ -80,9 +80,9 @@
                 <a class="first-tab" href="#">加入我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
-                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
-                        <li><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
+                        <li><a href="../join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../join/recruit.html">工作机会</a></li>
+                        <li><a href="../join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
@@ -101,7 +101,7 @@
                         <span>
                             <a href="">关于我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a>
+                            <a href="../anenst/groupStructure.html">集团架构</a>
                         </span>
                     </div>
                     <div class="text-introduce">
@@ -110,12 +110,12 @@
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li ><a href="../../../officialwebsite/views/anenst/companyinfo.html"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/speech.html"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/history.html"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
-                        <li class="active"><a href="../../../officialwebsite/views/anenst/groupStructure.html"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
+                        <li ><a href="../anenst/companyinfo.html"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
+                        <li><a href="../anenst/speech.html"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
+                        <li><a href="../anenst/history.html"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
+                        <li class="active"><a href="../anenst/groupStructure.html"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
 
-                        <li><a href="../../../officialwebsite/views/anenst/contact.html"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+                        <li><a href="../anenst/contact.html"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
 
                     </ul>
                 </div>
@@ -132,11 +132,11 @@
             <li><span>关于我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/anenst/companyinfo.html">公司概况</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/speech.html">总裁致辞</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/history.html">发展历史</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a></li>
+                        <li><a href="../anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="../anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="../anenst/history.html">发展历史</a></li>
+                        <li><a href="../anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="../anenst/contact.html">联系我们</a></li>
 
                     </ul>
                 </div>
@@ -144,35 +144,35 @@
             <li><span>媒体中心</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
-                        <li><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
-                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
+                        <li><a href="../media/news.html">新闻动态</a></li>
+                        <li><a href="../media/media.html">媒体报道</a></li>
+                        <li><a href="../media/thematicReport.html">专题报道</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>公司产品</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
-                        <li><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
-                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
+                        <li><a href="../product/business.html">业务领域</a></li>
+                        <li><a href="../product/products.html">产品展示</a></li>
+                        <li><a href="../product/cooperation.html">招商合作</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>公司文化</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/anenst/culture.html">文化理念</a></li>
-                        <li><a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a></li>
+                        <li><a href="../anenst/culture.html">文化理念</a></li>
+                        <li><a href="../anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>加入我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
-                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
-                        <li><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
+                        <li><a href="../join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../join/recruit.html">工作机会</a></li>
+                        <li><a href="../join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
